[package]
name = "bcslib"
version = "0.1.0"
edition = "2021"
authors = ["Chang <0x6368616e67@mail.com>"]
description = "The BSC bind for golang"
repository = "github.com/0x6368616e67/aptos-sdk-go"
homepage = "github.com/0x6368616e67/aptos-sdk-go"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", default-features = false }
serde_json = "1.0.81"
aptos-api-types = { path = "https://github.com/aptos-labs/aptos-core/api/types" }

